--- a/privacidad/index.html
+++ b/privacidad/index.html
@@ -2130,24 +2130,24 @@ main{padding: 28px 0 36px;}
 <button class="icon-btn" id="themeBtn" title="Tema"><span id="themeIcon">🖥️</span></button>
 </div>
 </header>
-<main><div class="container"><section class="contact-card"><h1>Política de privacidad</h1><p>Tu privacidad importa. Esta política explica qué información se maneja y con qué propósito cuando interactúas con MR Pizza GT a través del sitio y nuestros canales.</p><h2>1) Información que puedes proporcionar</h2><p>Cuando solicitas una cotización, haces un pedido o nos escribes, podrías compartir:</p><ul><li>Nombre y datos de contacto (por ejemplo, correo o número de teléfono).</li><li>Detalles del evento o pedido (fecha, horario, zona aproximada, preferencias).</li><li>Datos fiscales únicamente si solicitas factura.</li></ul><h2>2) Cómo utilizamos la información</h2><p>Usamos tu información únicamente para brindarte atención y completar el servicio.</p><ul><li>Responder consultas y dar seguimiento a pedidos/cotizaciones.</li><li>Confirmar disponibilidad, coordinar entrega y logística.</li><li>Emitir factura si fue solicitada y se proporcionaron datos fiscales.</li></ul><h2>3) Canales y almacenamiento</h2><p>La comunicación suele ocurrir por WhatsApp u otros canales. La información puede quedar registrada en dichos servicios conforme a sus propias políticas. En el sitio, no almacenamos una base de datos de clientes (no hay backend).</p><h2>4) Compartición con terceros</h2><p>No vendemos tu información. Solo la compartimos si es estrictamente necesario para cumplir el servicio, por ejemplo, con logística/entrega, o para facturación cuando aplique.</p><h2>5) Seguridad</h2><p>Aplicamos buenas prácticas razonables para proteger la información. Aun así, ningún sistema es 100% infalible. Evita compartir información sensible innecesaria por canales no seguros.</p><h2>6) Tus derechos y solicitudes</h2><p>Puedes solicitar correcciones o eliminación de información de conversaciones cuando sea posible. Para hacerlo, escribe por WhatsApp indicando “Privacidad” y el detalle de tu solicitud.</p><h2>7) Cambios a esta política</h2><p>Podemos actualizar esta política para reflejar mejoras del servicio o requisitos legales. La versión vigente estará publicada en esta página.</p><p style="margin-top:16px; text-align:center;"><a class="btn" href="/mrpizzasgt/">Volver al sitio principal</a></p></section></div></main>
+<main><div class="container"><section class="contact-card"><h1>Política de privacidad</h1><p>Tu privacidad importa. Esta política explica qué información se maneja y con qué propósito cuando interactúas con MR Pizza GT a través del sitio y nuestros canales.</p><h2>1) Información que puedes proporcionar</h2><p>Cuando solicitas una cotización, haces un pedido o nos escribes, podrías compartir:</p><ul><li>Nombre y datos de contacto (por ejemplo, correo o número de teléfono).</li><li>Detalles del evento o pedido (fecha, horario, zona aproximada, preferencias).</li><li>Datos fiscales únicamente si solicitas factura.</li></ul><h2>2) Cómo utilizamos la información</h2><p>Usamos tu información únicamente para brindarte atención y completar el servicio.</p><ul><li>Responder consultas y dar seguimiento a pedidos/cotizaciones.</li><li>Confirmar disponibilidad, coordinar entrega y logística.</li><li>Emitir factura si fue solicitada y se proporcionaron datos fiscales.</li></ul><h2>3) Canales y almacenamiento</h2><p>La comunicación suele ocurrir por WhatsApp u otros canales. La información puede quedar registrada en dichos servicios conforme a sus propias políticas. En el sitio, no almacenamos una base de datos de clientes (no hay backend).</p><h2>4) Compartición con terceros</h2><p>No vendemos tu información. Solo la compartimos si es estrictamente necesario para cumplir el servicio, por ejemplo, con logística/entrega, o para facturación cuando aplique.</p><h2>5) Seguridad</h2><p>Aplicamos buenas prácticas razonables para proteger la información. Aun así, ningún sistema es 100% infalible. Evita compartir información sensible innecesaria por canales no seguros.</p><h2>6) Tus derechos y solicitudes</h2><p>Puedes solicitar correcciones o eliminación de información de conversaciones cuando sea posible. Para hacerlo, escribe por WhatsApp indicando “Privacidad” y el detalle de tu solicitud.</p><h2>7) Cambios a esta política</h2><p>Podemos actualizar esta política para reflejar mejoras del servicio o requisitos legales. La versión vigente estará publicada en esta página.</p><p style="margin-top:16px; text-align:center;"><a class="btn" href="/">Volver al sitio principal</a></p></section></div></main>
 <footer class="footer">
 <div class="container footer-brand">
-<a aria-label="Ir a inicio" class="footer-brand__logo" href="/mrpizzasgt/">
+<a aria-label="Ir a inicio" class="footer-brand__logo" href="/">
 <img alt="MR Pizza GT" decoding="async" id="logoFooter" loading="lazy" src="../MR PIZZA LOGO-Ligth.png"/>
 </a>
 <p class="footer-brand__tagline">Soluciones gastronomicas para eventos corporativos.</p>
 </div>
 <div aria-label="Enlaces del sitio" class="container footer-links-inline">
-<a href="/mrpizzasgt/preguntas/">Preguntas frecuentes</a>
+<a href="/preguntas/">Preguntas frecuentes</a>
 <span class="sep">|</span>
-<a href="/mrpizzasgt/quienes-somos/">Quienes somos</a>
+<a href="/quienes-somos/">Quienes somos</a>
 <span class="sep">|</span>
-<a href="/mrpizzasgt/contacto/">Contacto</a>
+<a href="/contacto/">Contacto</a>
 <span class="sep">|</span>
-<a href="/mrpizzasgt/terminos/">Terminos de uso</a>
+<a href="/terminos/">Terminos de uso</a>
 <span class="sep">|</span>
-<a href="/mrpizzasgt/privacidad/">Politica de privacidad</a>
+<a href="/privacidad/">Politica de privacidad</a>
 </div>
 <div class="container">
 <div aria-label="Redes sociales" class="social">
@@ -2221,13 +2221,13 @@ main{padding: 28px 0 36px;}
   // ===== Header (misma NV visual; acciones redirigen al index principal)
   (function(){
     const brand=document.querySelector("header .brand");
-    if(brand) brand.addEventListener("click", ()=>{ location.href="/mrpizzasgt/"; });
+    if(brand) brand.addEventListener("click", ()=>{ location.href="/"; });
 
     const btnPublic=document.getElementById("btnPublic");
     const btnBiz=document.getElementById("btnBiz");
     // NOTA: /business no existe como ruta. Usamos hash para cambiar de vista en el index.
-    if(btnPublic) btnPublic.addEventListener("click", ()=>{ location.href="/mrpizzasgt/"; });
-    if(btnBiz) btnBiz.addEventListener("click", ()=>{ location.href="/mrpizzasgt/?view=business"; });
+    if(btnPublic) btnPublic.addEventListener("click", ()=>{ location.href="/"; });
+    if(btnBiz) btnBiz.addEventListener("click", ()=>{ location.href="/?view=business"; });
   })();
 
   // ===== FAQ accordion
