--- a/quienes-somos/index.html
+++ b/quienes-somos/index.html
@@ -2122,24 +2122,24 @@ html[data-theme="dark"] h2.menu-section-title,
 <button class="icon-btn" id="themeBtn" title="Tema"><span id="themeIcon">🖥️</span></button>
 </div>
 </header>
-<main class="page-wrap"><div class="container"><h1>Quiénes somos</h1><p>MR Pizza GT es una marca guatemalteca enfocada en pizzas y complementos, con una experiencia pensada para pedidos nocturnos y eventos corporativos (B2B).</p><div class="callout"><h2>Nuestra propuesta</h2><ul><li>Cotización rápida: eliges productos y el sistema arma tu mensaje para WhatsApp.</li><li>Menú claro y consistente: lo que ves es lo que cotizas.</li><li>Enfoque B2B: eventos, oficinas, reuniones, capacitaciones y convivios.</li><li>Diseño mobile-first: pensado para funcionar bien como PWA en Android/iOS.</li></ul></div><h2>¿Para qué tipo de eventos?</h2><p>Nos adaptamos a diferentes tamaños y formatos. Ejemplos comunes:</p><ul><li>Reuniones internas, capacitaciones y team buildings.</li><li>Convivios de fin de año, aniversarios y celebraciones.</li><li>Activaciones, lanzamientos y visitas de clientes.</li><li>Cenas corporativas o pedidos para turnos nocturnos.</li></ul><h2>Cómo trabajamos</h2><p>Seleccionas productos, indicas fecha y horario, y envías la cotización o pedido por WhatsApp. Te confirmamos disponibilidad, logística y siguientes pasos.</p><p style="margin-top:14px;"><a class="btn primary" href="/mrpizzasgt/">Volver al sitio principal</a></p></div></main>
+<main class="page-wrap"><div class="container"><h1>Quiénes somos</h1><p>MR Pizza GT es una marca guatemalteca enfocada en pizzas y complementos, con una experiencia pensada para pedidos nocturnos y eventos corporativos (B2B).</p><div class="callout"><h2>Nuestra propuesta</h2><ul><li>Cotización rápida: eliges productos y el sistema arma tu mensaje para WhatsApp.</li><li>Menú claro y consistente: lo que ves es lo que cotizas.</li><li>Enfoque B2B: eventos, oficinas, reuniones, capacitaciones y convivios.</li><li>Diseño mobile-first: pensado para funcionar bien como PWA en Android/iOS.</li></ul></div><h2>¿Para qué tipo de eventos?</h2><p>Nos adaptamos a diferentes tamaños y formatos. Ejemplos comunes:</p><ul><li>Reuniones internas, capacitaciones y team buildings.</li><li>Convivios de fin de año, aniversarios y celebraciones.</li><li>Activaciones, lanzamientos y visitas de clientes.</li><li>Cenas corporativas o pedidos para turnos nocturnos.</li></ul><h2>Cómo trabajamos</h2><p>Seleccionas productos, indicas fecha y horario, y envías la cotización o pedido por WhatsApp. Te confirmamos disponibilidad, logística y siguientes pasos.</p><p style="margin-top:14px;"><a class="btn primary" href="/">Volver al sitio principal</a></p></div></main>
 <footer class="footer">
 <div class="container footer-brand">
-<a aria-label="Ir a inicio" class="footer-brand__logo" href="/mrpizzasgt/">
+<a aria-label="Ir a inicio" class="footer-brand__logo" href="/">
 <img alt="MR Pizza GT" decoding="async" id="logoFooter" loading="lazy" src="../MR PIZZA LOGO-Ligth.png"/>
 </a>
 <p class="footer-brand__tagline">Soluciones gastronomicas para eventos corporativos.</p>
 </div>
 <div aria-label="Enlaces del sitio" class="container footer-links-inline">
-<a href="/mrpizzasgt/preguntas/">Preguntas frecuentes</a>
+<a href="/preguntas/">Preguntas frecuentes</a>
 <span class="sep">|</span>
-<a href="/mrpizzasgt/quienes-somos.html">Quienes somos</a>
+<a href="/quienes-somos.html">Quienes somos</a>
 <span class="sep">|</span>
-<a href="/mrpizzasgt/contacto/">Contacto</a>
+<a href="/contacto/">Contacto</a>
 <span class="sep">|</span>
-<a href="/mrpizzasgt/terminos/">Terminos de uso</a>
+<a href="/terminos/">Terminos de uso</a>
 <span class="sep">|</span>
-<a href="/mrpizzasgt/privacidad/">Politica de privacidad</a>
+<a href="/privacidad/">Politica de privacidad</a>
 </div>
 <div class="container">
 <div aria-label="Redes sociales" class="social">
@@ -2213,13 +2213,13 @@ html[data-theme="dark"] h2.menu-section-title,
   // ===== Header (misma NV visual; acciones redirigen al index principal)
   (function(){
     const brand=document.querySelector("header .brand");
-    if(brand) brand.addEventListener("click", ()=>{ location.href="/mrpizzasgt/"; });
+    if(brand) brand.addEventListener("click", ()=>{ location.href="/"; });
 
     const btnPublic=document.getElementById("btnPublic");
     const btnBiz=document.getElementById("btnBiz");
     // NOTA: /business no existe como ruta. Usamos hash para cambiar de vista en el index.
-    if(btnPublic) btnPublic.addEventListener("click", ()=>{ location.href="/mrpizzasgt/"; });
-    if(btnBiz) btnBiz.addEventListener("click", ()=>{ location.href="/mrpizzasgt/?view=business"; });
+    if(btnPublic) btnPublic.addEventListener("click", ()=>{ location.href="/"; });
+    if(btnBiz) btnBiz.addEventListener("click", ()=>{ location.href="/?view=business"; });
   })();
 
   // ===== FAQ accordion
