--- a/terminos/index.html
+++ b/terminos/index.html
@@ -2202,24 +2202,24 @@ main{padding: 28px 0 36px;}
 </div>
 </header>
 <div aria-atomic="true" aria-live="polite" class="toast-host" id="toastHost"></div>
-<main><div class="container"><section class="contact-card"><h1>Términos de uso</h1><p>Estos términos explican cómo se utiliza el sitio y cómo se confirma un pedido o cotización. Al usar este sitio, aceptas lo siguiente:</p><h2>1) Uso del sitio</h2><p>El sitio es informativo y permite preparar una cotización o pedido para enviarlo por WhatsApp. No procesamos pagos dentro del sitio.</p><ul><li>La información mostrada puede actualizarse sin previo aviso.</li><li>La confirmación final se realiza por WhatsApp (disponibilidad, horario, zona y costos).</li></ul><h2>2) Cotizaciones y disponibilidad</h2><p>Las cotizaciones son estimaciones basadas en la selección del usuario. La disponibilidad depende de fecha, hora, volumen y logística.</p><ul><li>Una cotización no garantiza disponibilidad hasta que sea confirmada por el equipo.</li><li>Podemos proponer alternativas si algún producto no está disponible.</li></ul><h2>3) Precios y cambios</h2><p>Los precios pueden variar por temporada, zona de entrega o promociones. El precio confirmado es el que se acuerde por WhatsApp al momento de confirmar el pedido.</p><ul><li>Las imágenes son referenciales.</li><li>Promociones o combos pueden tener condiciones específicas.</li></ul><h2>4) Entrega y responsabilidad</h2><p>La entrega y tiempos estimados dependen de tráfico, clima y distancia. Hacemos lo posible por cumplir el horario acordado.</p><ul><li>El cliente debe proporcionar una ubicación clara y un contacto disponible.</li><li>Si el acceso es restringido (condominios/empresas), el cliente debe facilitar el ingreso.</li></ul><h2>5) Facturación</h2><p>Si necesitas factura, indícalo en tu mensaje y proporciona los datos fiscales. La emisión está sujeta a validaciones y políticas internas.</p><h2>6) Conducta y uso indebido</h2><p>No se permite usar el sitio para spam, fraude o suplantación. Podemos bloquear el acceso o enlaces si detectamos abuso.</p><h2>7) Modificaciones a estos términos</h2><p>Podemos actualizar estos términos cuando sea necesario. La versión vigente estará publicada en esta página.</p><p style="margin-top:16px; text-align:center;"><a class="btn" href="/">Volver al sitio principal</a></p></section></div></main>
+<main><div class="container"><section class="contact-card"><h1>Términos de uso</h1><p>Estos términos explican cómo se utiliza el sitio y cómo se confirma un pedido o cotización. Al usar este sitio, aceptas lo siguiente:</p><h2>1) Uso del sitio</h2><p>El sitio es informativo y permite preparar una cotización o pedido para enviarlo por WhatsApp. No procesamos pagos dentro del sitio.</p><ul><li>La información mostrada puede actualizarse sin previo aviso.</li><li>La confirmación final se realiza por WhatsApp (disponibilidad, horario, zona y costos).</li></ul><h2>2) Cotizaciones y disponibilidad</h2><p>Las cotizaciones son estimaciones basadas en la selección del usuario. La disponibilidad depende de fecha, hora, volumen y logística.</p><ul><li>Una cotización no garantiza disponibilidad hasta que sea confirmada por el equipo.</li><li>Podemos proponer alternativas si algún producto no está disponible.</li></ul><h2>3) Precios y cambios</h2><p>Los precios pueden variar por temporada, zona de entrega o promociones. El precio confirmado es el que se acuerde por WhatsApp al momento de confirmar el pedido.</p><ul><li>Las imágenes son referenciales.</li><li>Promociones o combos pueden tener condiciones específicas.</li></ul><h2>4) Entrega y responsabilidad</h2><p>La entrega y tiempos estimados dependen de tráfico, clima y distancia. Hacemos lo posible por cumplir el horario acordado.</p><ul><li>El cliente debe proporcionar una ubicación clara y un contacto disponible.</li><li>Si el acceso es restringido (condominios/empresas), el cliente debe facilitar el ingreso.</li></ul><h2>5) Facturación</h2><p>Si necesitas factura, indícalo en tu mensaje y proporciona los datos fiscales. La emisión está sujeta a validaciones y políticas internas.</p><h2>6) Conducta y uso indebido</h2><p>No se permite usar el sitio para spam, fraude o suplantación. Podemos bloquear el acceso o enlaces si detectamos abuso.</p><h2>7) Modificaciones a estos términos</h2><p>Podemos actualizar estos términos cuando sea necesario. La versión vigente estará publicada en esta página.</p><p style="margin-top:16px; text-align:center;"><a class="btn" href="../">Volver al sitio principal</a></p></section></div></main>
 <footer class="footer">
 <div class="container footer-brand">
-<a aria-label="Ir a inicio" class="footer-brand__logo" href="/">
+<a aria-label="Ir a inicio" class="footer-brand__logo" href="../">
 <img alt="MR Pizza GT" decoding="async" id="logoFooter" loading="lazy" src="../MR PIZZA LOGO-Ligth.png"/>
 </a>
 <p class="footer-brand__tagline">Soluciones gastronomicas para eventos corporativos.</p>
 </div>
 <div aria-label="Enlaces del sitio" class="container footer-links-inline">
-<a href="/preguntas/">Preguntas frecuentes</a>
+<a href="../preguntas/">Preguntas frecuentes</a>
 <span class="sep">|</span>
-<a href="/quienes-somos/">Quienes somos</a>
+<a href="../quienes-somos/">Quienes somos</a>
 <span class="sep">|</span>
-<a href="/contacto/">Contacto</a>
+<a href="../contacto/">Contacto</a>
 <span class="sep">|</span>
-<a href="/terminos/">Terminos de uso</a>
+<a href="../terminos/">Terminos de uso</a>
 <span class="sep">|</span>
-<a href="/privacidad/">Politica de privacidad</a>
+<a href="../privacidad/">Politica de privacidad</a>
 </div>
 <div class="container">
 <div aria-label="Redes sociales" class="social">
@@ -2293,13 +2293,13 @@ main{padding: 28px 0 36px;}
   // ===== Header (misma NV visual; acciones redirigen al index principal)
   (function(){
     const brand=document.querySelector("header .brand");
-    if(brand) brand.addEventListener("click", ()=>{ location.href="/"; });
+    if(brand) brand.addEventListener("click", ()=>{ location.href="../"; });
 
     const btnPublic=document.getElementById("btnPublic");
     const btnBiz=document.getElementById("btnBiz");
     // NOTA: /business no existe como ruta. Usamos hash para cambiar de vista en el index.
-    if(btnPublic) btnPublic.addEventListener("click", ()=>{ location.href="/"; });
-    if(btnBiz) btnBiz.addEventListener("click", ()=>{ location.href="/?view=business"; });
+    if(btnPublic) btnPublic.addEventListener("click", ()=>{ location.href="../"; });
+    if(btnBiz) btnBiz.addEventListener("click", ()=>{ location.href="../?view=business"; });
   })();
 
   // ===== FAQ accordion
