Feat: cambio para desrgable app ios and android

--- a/index.html
+++ b/index.html
@@ -2039,15 +2039,15 @@ html[data-theme="dark"] h2.menu-section-title,
 <meta content="website" property="og:type"/>
 <meta content="Mr Pizza GT | Pizzas &amp; Crepas para Empresas y Pedidos Nocturnos" property="og:title"/>
 <meta content="Pizzas y crepas para pedidos nocturnos y convivios empresariales. Confirmamos rápido y entregamos sin complicarte." property="og:description"/>
-<meta content="https://gaschsoft.com/mrpizzasgt/" property="og:url"/>
-<meta content="https://gaschsoft.com/mrpizzasgt/MR%20PIZZA%20LOGO-Ligth.png" property="og:image"/>
+<meta content="https://mrpizzasgt/" property="og:url"/>
+<meta content="https://mrpizzasgt/MR%20PIZZA%20LOGO-Ligth.png" property="og:image"/>
 <meta content="1200" property="og:image:width"/>
 <meta content="630" property="og:image:height"/>
 <!-- Twitter Card -->
 <meta content="summary_large_image" name="twitter:card"/>
 <meta content="Mr Pizza GT | Pizzas &amp; Crepas" name="twitter:title"/>
 <meta content="Pedidos nocturnos y eventos empresariales sin complicarte." name="twitter:description"/>
-<meta content="https://gaschsoft.com/mrpizzasgt/MR%20PIZZA%20LOGO-Ligth.png" name="twitter:image"/>
+<meta content="https://mrpizzasgt/MR%20PIZZA%20LOGO-Ligth.png" name="twitter:image"/>
 <!-- Favicons / PWA -->
 <meta content="#b81f24" name="theme-color"/>
 <meta content="yes" name="apple-mobile-web-app-capable"/>
