Fix: previews hacia url correct

--- a/index.html
+++ b/index.html
@@ -2039,10 +2039,10 @@ html[data-theme="dark"] h2.menu-section-title,
 <meta content="website" property="og:type"/>
 <meta content="Mr Pizza GT | Pizzas &amp; Crepas para Empresas y Pedidos Nocturnos" property="og:title"/>
 <meta content="Pizzas y crepas para pedidos nocturnos y convivios empresariales. Confirmamos rápido y entregamos sin complicarte." property="og:description"/>
-<meta content="https://mrpizzasgt/" property="og:url"/>
-<meta content="https://mrpizzasgt/MR%20PIZZA%20LOGO-Ligth.png" property="og:image"/>
-<meta content="1200" property="og:image:width"/>
-<meta content="630" property="og:image:height"/>
+<meta content="https://mrpizzasgt/" property="https://mrpizzasgt.com/"/>
+<meta content="https://mrpizzasgt/MR%20PIZZA%20LOGO-Ligth.png" property="https://mrpizzasgt.com/MR%20PIZZA%20LOGO-Ligth.png"/>
+<meta content="1200" property="https://mrpizzasgt.com/MR%20PIZZA%20LOGO-Ligth.png:width"/>
+<meta content="630" property="https://mrpizzasgt.com/MR%20PIZZA%20LOGO-Ligth.png:height"/>
 <!-- Twitter Card -->
 <meta content="summary_large_image" name="twitter:card"/>
 <meta content="Mr Pizza GT | Pizzas &amp; Crepas" name="twitter:title"/>
