Fix: preview whatsapp

--- a/index15.html
+++ b/index15.html
@@ -2039,10 +2039,6 @@ html[data-theme="dark"] h2.menu-section-title,
 <meta content="website" property="og:type"/>
 <meta content="Mr Pizza GT | Pizzas &amp; Crepas para Empresas y Pedidos Nocturnos" property="og:title"/>
 <meta content="Pizzas y crepas para pedidos nocturnos y convivios empresariales. Confirmamos rápido y entregamos sin complicarte." property="og:description"/>
-<meta property="og:url" content="https://mrpizzasgt.com/">
-<meta property="og:image" content="https://mrpizzasgt.com/MR%20PIZZA%20LOGO-Ligth.png">
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
 <meta content="https://mrpizzasgt/" property="https://mrpizzasgt.com/"/>
 <meta content="https://mrpizzasgt/MR%20PIZZA%20LOGO-Ligth.png" property="https://mrpizzasgt.com/MR%20PIZZA%20LOGO-Ligth.png"/>
 <meta content="1200" property="https://mrpizzasgt.com/MR%20PIZZA%20LOGO-Ligth.png:width"/>
@@ -2051,7 +2047,7 @@ html[data-theme="dark"] h2.menu-section-title,
 <meta content="summary_large_image" name="twitter:card"/>
 <meta content="Mr Pizza GT | Pizzas &amp; Crepas" name="twitter:title"/>
 <meta content="Pedidos nocturnos y eventos empresariales sin complicarte." name="twitter:description"/>
-<meta content="https://mrpizzasgt.com/MR%20PIZZA%20LOGO-Ligth.png" name="twitter:image"/>
+<meta content="https://mrpizzasgt/MR%20PIZZA%20LOGO-Ligth.png" name="twitter:image"/>
 <!-- Favicons / PWA -->
 <meta content="#b81f24" name="theme-color"/>
 <meta content="yes" name="apple-mobile-web-app-capable"/>
