Feat: mejoras preguntas, pz tejana, vaso de fresas

--- a/mrpizzasgt_v60_2.html
+++ b/mrpizzasgt_v60_2.html
@@ -2318,7 +2318,7 @@ html[data-theme="dark"] h2.menu-section-title,
 <!-- ===================== SECCIÓN CONDICIONAL: PÚBLICO ===================== -->
 <section class="section" id="pubSection">
 <div class="container">
-<h2>Público: pedí en la noche sin complicarte</h2>
+<h2>Pedí en la noche sin complicarte</h2>
 <p>
         Cuando el antojo pega, lo resolvemos rápido. Vos escribís, confirmamos disponibilidad y listo.
       </p>
@@ -2328,8 +2328,8 @@ html[data-theme="dark"] h2.menu-section-title,
 <span class="menu-toggle__left">
 <span class="menu-toggle__icon">🍕</span>
 <span>
-<strong class="menu-title">Nuestras pizzas</strong>
-<span class="menu-toggle__meta">Q85 • 8 porciones • 8 sabores</span>
+<strong class="menu-title">Nuestro Menú</strong>
+<span class="menu-toggle__meta">Pizzas Q85 • 8 porciones • 8 sabores</span>
 </span>
 </span>
 <span aria-hidden="true" class="menu-toggle__chev">▾</span>
