--- a/preguntas/index.html
+++ b/preguntas/index.html
@@ -2145,7 +2145,7 @@ html[data-theme="dark"] h2.menu-section-title,
           </svg>
         </button>
         <div class="faq-a" hidden>
-          <div class="faq-a__inner">Entrá a la vista **Empresas** desde el menú superior, seleccioná productos, fecha y horario. Al final, enviás la cotización por WhatsApp con un mensaje ya estructurado.</div>
+          <div class="faq-a__inner">Entrá a la vista Empresas desde el menú superior, seleccioná productos, fecha y horario. Al final, enviás la cotización por WhatsApp con un mensaje ya estructurado.</div>
         </div>
       </div>
 
@@ -2159,7 +2159,7 @@ html[data-theme="dark"] h2.menu-section-title,
           </svg>
         </button>
         <div class="faq-a" hidden>
-          <div class="faq-a__inner">Para eventos corporativos recomendamos **24 a 72 horas** según cantidad y logística. Si es urgente, escribinos y te confirmamos si es viable.</div>
+          <div class="faq-a__inner">Para eventos corporativos recomendamos 3 días según cantidad y logística. Si es urgente, escribinos y te confirmamos si es viable.</div>
         </div>
       </div>
 
@@ -2173,7 +2173,7 @@ html[data-theme="dark"] h2.menu-section-title,
           </svg>
         </button>
         <div class="faq-a" hidden>
-          <div class="faq-a__inner">No siempre. El mínimo depende del tipo de evento. Para oficinas pequeñas también podemos armar **paquetes eficientes**.</div>
+          <div class="faq-a__inner">Sí. El mínimo es de 15 pizzas. Para grupos pequeños también podemos armar paquetes eficientes.</div>
         </div>
       </div>
 
@@ -2187,7 +2187,7 @@ html[data-theme="dark"] h2.menu-section-title,
           </svg>
         </button>
         <div class="faq-a" hidden>
-          <div class="faq-a__inner">La entrega depende de zona y horario. Para eventos, podemos coordinar **entrega programada**; si necesitás montaje/servicio, se cotiza aparte.</div>
+          <div class="faq-a__inner">La entrega depende de zona y horario. Para eventos, podemos coordinar entrega programada; si necesitás montaje/servicio, se cotiza aparte.</div>
         </div>
       </div>
 
@@ -2201,7 +2201,7 @@ html[data-theme="dark"] h2.menu-section-title,
           </svg>
         </button>
         <div class="faq-a" hidden>
-          <div class="faq-a__inner">Sí. Indicá en tu mensaje de cotización que necesitás **factura** y agregá tus datos fiscales.</div>
+          <div class="faq-a__inner">Sí. Indicá en tu mensaje de cotización que necesitás factura y agregá tus datos fiscales.</div>
         </div>
       </div>
 
@@ -2215,7 +2215,7 @@ html[data-theme="dark"] h2.menu-section-title,
           </svg>
         </button>
         <div class="faq-a" hidden>
-          <div class="faq-a__inner">Si tu evento cambia, escribinos lo antes posible. Hacemos lo posible por **reprogramar** sin complicaciones.</div>
+          <div class="faq-a__inner">Si tu evento cambia, escribinos lo antes posible. Hacemos lo posible por reprogramar sin complicaciones.</div>
         </div>
       </div>
 
@@ -2257,7 +2257,7 @@ html[data-theme="dark"] h2.menu-section-title,
           </svg>
         </button>
         <div class="faq-a" hidden>
-          <div class="faq-a__inner">Podemos evaluar cobertura según **zona, horario y cantidad**. Escribinos la ubicación y la fecha para confirmarlo.</div>
+          <div class="faq-a__inner">Podemos evaluar cobertura según zona, horario y cantidad. Escribinos la ubicación y la fecha para confirmarlo.</div>
         </div>
       </div>
 
